--- a/ai-todolist/config.ini
+++ b/ai-todolist/config.ini
@@ -5,21 +5,12 @@ author = "Your Name"
 email = "your.email@example.com"
 
 [llm]
-; deepseek
-; model = deepseek-chat
-; endpoint = https://api.deepseek.com
-
-
-; 火山方舟
 provider = volcanoark
 model_name = deepseek-v3-241226
 endpoint = https://ark.cn-beijing.volces.com/api/v3/chat/completions
-
 timeout = 15
-; 代理设置 (如不需要代理请留空)
 proxy_host = http://127.0.0.1
 proxy_port = 10808
-
 
 [database]
 db_path = "path/to/your/database.db"
@@ -30,6 +21,7 @@ reminder_interval = 15  ; in minutes
 [api]
 ai_api_url = "https://api.example.com"
 api_key = "your_api_key_here"
+log_level = INFO
 
 [ui]
 theme = "light"
@@ -38,3 +30,4 @@ font_size = 12
 [logging]
 log_file = "path/to/your/logfile.log"
 log_level = "DEBUG"
+
